packages/typ/tests/fixtures/diagnostics/0013_core_plus_bool_02.ml
let ( + ) (x : int) (y : int) : int = x
let bad = 1 + true
